National: fixed broken layout on search results page and most popular searches box.

--- a/web/interface/themes/national/css/default.css
+++ b/web/interface/themes/national/css/default.css
@@ -25,7 +25,7 @@ body {
     display:none;
 }
 .container {
-    position:absolute;
+    position:relative;
     width:100%;
 }
 .content {
